files/script/test_all_one/parse_error/def/test_def_error2.ll


main()
{

}

#script("script/test_all/parse_error/def/test_def_error2.ll")